ajout du fichier style.css + correction des chemins pour lier mon fichier html au fichier css

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
     <meta name="description" content="Obtenez jusqu'à 9500€ d'aides de l'État pour l'installation d'une pompe à chaleur. MaPrimeRénov', CEE, éco-prêt à taux zéro. Vérifiez votre éligibilité gratuitement.">
     <meta name="keywords" content="pompe à chaleur, aides état, MaPrimeRénov, CEE, économie énergie, chauffage, rénovation énergétique">
     <title>Pompe à Chaleur : Jusqu'à 9500€ d'Aides de l'État | Vérifiez votre Éligibilité</title>
-    <link rel="stylesheet" href="./assets/styles/style.css">
+    <link rel="stylesheet" href="../assets/styles/style.css">
+    <script defer src="../assets/js/main.js"></script>
 </head>
 <body>
     <!-- HEADER -->
@@ -130,7 +131,7 @@
             <div class="testimonials-list">
                 <article class="testimonial">
                     <div class="testimonial-avatar"></div>
-                    <p class="testimonial-text">Note + avis</p>
+                    <p class="testimonial-text">Note et avis</p>
                 </article>
 
                 <article class="testimonial">
