Ajout d'un menu burger dans le fichier index.html + Mise en place du design CSS avec le mobile first, puis la tablette et enfin la version desktop

--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,16 @@
     <!-- HEADER -->
     <header class="header">
         <div class="logo">
-            <!-- Logo ici -->
+            <img src="" alt="">Logo
         </div>
-        <nav class="nav">
+
+        <button class="burger-menu" aria-label="Toggle menu" aria-expanded="false">
+            <span class="burger-line"></span>
+            <span class="burger-line"></span>
+            <span class="burger-line"></span>
+        </button>
+
+        <nav class="navbar">
             <a href="#section1">Aides financières</a>
             <a href="#section2">Simulateur</a>
             <a href="#section3">Pourquoi ?</a>
@@ -47,7 +54,10 @@
                 </article>
             </div>
 
-            <button class="btn-eligibility">Je vérifie mon éligibilité</button>
+            <a href="#section2">
+                <button class="btn-eligibility">Je vérifie mon éligibilité</button>
+            </a>
+
             <div class="arrow-down"></div>
         </section>
 
