Changement des noms des classes au niveau des témoignages clients dans le fichier index.html ainsi que le fichier style.css

--- a/public/index.html
+++ b/public/index.html
@@ -138,20 +138,20 @@
         <section id="section4">
             <h2>Ils nous font confiance</h2>
 
-            <div class="testimonials-list">
-                <article class="testimonial">
-                    <div class="testimonial-avatar"></div>
-                    <p class="testimonial-text">Note et avis</p>
+            <div class="review-list">
+                <article class="review">
+                    <div class="user-avatar"></div>
+                    <p class="user-review">Le commentaire utilisateur</p>
                 </article>
 
-                <article class="testimonial">
-                    <div class="testimonial-avatar"></div>
-                    <p class="testimonial-text"></p>
+                <article class="review">
+                    <div class="user-avatar"></div>
+                    <p class="user-review"></p>
                 </article>
 
-                <article class="testimonial">
-                    <div class="testimonial-avatar"></div>
-                    <p class="testimonial-text"></p>
+                <article class="review">
+                    <div class="user-avatar"></div>
+                    <p class="user-review"></p>
                 </article>
             </div>
 
