J'inclus Bootstrap via CDN

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,11 @@
     <title>Pompe à Chaleur : Jusqu'à 9500€ d'Aides de l'État | Vérifiez votre Éligibilité</title>
     <link rel="stylesheet" href="../assets/styles/style.css">
     <script defer src="../assets/js/main.js"></script>
+
+    <!-- Inclure Bootstrap CSS et JS via CDN -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+    
 </head>
 <body>
     <!-- HEADER -->
