Modification du nom de classe pour les liens dans le footer + ajustement de la dispostion des liens selon si le site est en version mobile, tablette ou desktop

--- a/public/index.html
+++ b/public/index.html
@@ -209,10 +209,10 @@
     <footer class="footer">
         <div class="footer-content">
             <p>&copy; 2025 Haut Sommet - Tous droits réservés</p>
-            <div class="footer-social">
-                <a href="#"><i class="bi bi-facebook"></i></a>
-                <a href="#"><i class="bi bi-instagram"></i></a>
-                <a href="#"><i class="bi bi-linkedin"></i></a>
+            <div class="footer-links">
+                <a href="#">Mentions légales</a>
+                <a href="#">Nos partenaires</a>
+                <a href="#">Politique de confidentialité</a>
             </div>
         </div>
     </footer>
