--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="../assets/styles/style.css">
     <script defer src="../assets/js/main.js"></script>
 
-    <!-- Bootstrap Icons uniquement -->
+    <!-- J'inclus uniquement les icônes Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
-    <!-- HEADER -->
+    <!-- L'en-tête de la page -->
     <header class="header">
         <div class="logo">
             <img src="" alt="">Logo
@@ -106,7 +106,7 @@
             </div>
         </section>
 
-        <!-- Section 3 : Pourquoi choisir une pompe à chaleur  -->
+        <!-- Section 3 : Pourquoi choisir une pompe à chaleur ?  -->
         <section id="section3">
             <h2>Pourquoi installer une Pompe à Chaleur chez soi ?</h2>
 
@@ -146,7 +146,7 @@
             </div>
         </section>
 
-        <!-- Section 4 : Ils nous font confiance -->
+        <!-- Section 4 : Témoignages clients -->
         <section id="section4">
             <h2>Ils nous font confiance</h2>
 
@@ -205,7 +205,7 @@
         </section>
     </main>
 
-    <!-- FOOTER -->
+    <!-- Le pied de page -->
     <footer class="footer">
         <div class="footer-content">
             <p>&copy; 2025 Haut Sommet - Tous droits réservés</p>
