Je remplace les liens de réseaux sociaux dans le footer par les mentions légales et d'autres infos + je sors la balise du bouton de sa div form-navigation pour que le bouton de soumission soit visible en dessous de la dernière étape + je remanie quelques commentaires du fichier style.css

--- a/public/index.html
+++ b/public/index.html
@@ -206,8 +206,9 @@
                         <div class="form-navigation">
                             <button type="button" class="nav-prev"><i class="bi bi-chevron-left"></i></button>
                             <span class="page-indicator"><span class="current-step">4</span>/4</span>
-                            <button type="submit" class="btn-submit"><i class="bi bi-check-circle"></i> Voir mes aides</button>
                         </div>
+
+                        <button type="submit" class="btn-submit"><i class="bi bi-check-circle"></i>Voir mes aides</button>
 
                         <p class="form-disclaimer">
                             En soumettant ce formulaire, vous acceptez d'être recontacté(e) par Haut Sommet 
@@ -321,10 +322,10 @@
     <footer class="footer">
         <div class="footer-content">
             <p>&copy; 2025 Haut Sommet - Tous droits réservés</p>
-            <div class="footer-social">
-                <a href="#"><i class="bi bi-facebook"></i></a>
-                <a href="#"><i class="bi bi-instagram"></i></a>
-                <a href="#"><i class="bi bi-linkedin"></i></a>
+            <div class="footer-links">
+                <a href="#">Mentions légales</a>
+                <a href="#">haut-sommet@test.fr</a>
+                <a href="#">Landing page</i></a>
             </div>
         </div>
     </footer>
