Ajout de l'étape 5 qui de base est cahée et se déclenche uniquement après soumission du formulaire, il s'agit d'un message de confirmation indiquant que la personne va être recontacté, j'ajoute la logique dans mon script main.js et je style le tout dans mon fichier style.css

--- a/public/index.html
+++ b/public/index.html
@@ -98,10 +98,6 @@
                             <button type="button" class="nav-next"><i class="bi bi-chevron-right"></i></button>
                         </div>
 
-                        <p class="form-disclaimer">
-                            En soumettant ce formulaire, vous acceptez d'être recontacté(e) par Haut Sommet 
-                            dans le cadre de votre demande de simulation.
-                        </p>
                     </div>
 
                     <!-- Étape 2 : Statut du logement -->
@@ -208,12 +204,31 @@
                             <span class="page-indicator"><span class="current-step">4</span>/4</span>
                         </div>
 
-                        <button type="submit" class="btn-submit"><i class="bi bi-check-circle"></i>Voir mes aides</button>
+                        <button type="submit" class="btn-submit"><i class="bi bi-check-circle"></i>Envoyer</button>
 
                         <p class="form-disclaimer">
                             En soumettant ce formulaire, vous acceptez d'être recontacté(e) par Haut Sommet 
                             dans le cadre de votre demande de simulation.
                         </p>
+                    </div>
+
+                    <!-- Étape 5 : Confirmation -->
+                    <div class="form-step" data-step="5">
+                        <div class="confirmation-message">
+                            <div class="confirmation-icon">
+                                <i class="bi bi-check-circle-fill"></i>
+                            </div>
+                            <h3>Merci pour votre demande !</h3>
+                            <p class="confirmation-text">
+                                Votre demande a bien été enregistrée. Un de nos conseillers va vous recontacter 
+                                très prochainement pour vous communiquer le montant exact de vos aides et vous 
+                                accompagner dans votre projet.
+                            </p>
+                            <p class="confirmation-subtext">
+                                <i class="bi bi-telephone-fill"></i>
+                                Vous serez contacté(e) dans les 24 heures
+                            </p>
+                        </div>
                     </div>
                 </form>
             </div>
