--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,23 @@
     <meta name="keywords" content="pompe à chaleur, aides état, MaPrimeRénov, CEE, économie énergie, chauffage, rénovation énergétique">
     <title>Pompe à Chaleur : Jusqu'à 9500€ d'Aides de l'État | Vérifiez votre Éligibilité</title>
     <link rel="stylesheet" href="../assets/styles/style.css">
-    <script defer src="../assets/js/main.js"></script>
 
     <!-- Bootstrap Icons uniquement -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
+    <!-- EmailJS SDK -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+    
+    <!-- Initialisation EmailJS -->
+    <script type="text/javascript">
+        (function(){
+            emailjs.init('jKNqo-W9zXWuv8Rs5'); // Remplace la valeur ici par ta Public Key qui se trouve dans ton onglet Account de ton profil EmailJS
+        })();
+    </script>
+
+    <!-- Le script principal -->
+    <script defer src="../assets/js/main.js"></script>
+
 </head>
 <body>
     <!-- HEADER -->
