--- a/public/index.html
+++ b/public/index.html
@@ -174,6 +174,18 @@
                             </label>
                         </div>
 
+                        <!-- Champ conditionnel pour "Autre" (caché par défaut) -->
+                        <div class="form-field" id="autre-chauffage-field" style="display: none;">
+                            <label for="autre-chauffage">Précisez votre type de chauffage *</label>
+                            <input 
+                                type="text" 
+                                id="autre-chauffage" 
+                                name="autre_chauffage" 
+                                placeholder="Ex: Pompe à chaleur existante, chauffage solaire, etc."
+                                maxlength="50"
+                            >
+                        </div>
+
                         <div class="form-field">
                             <label for="departement">Dans quel département habitez-vous ?</label>
                             <input type="text" id="departement" name="departement" placeholder="Ex: 75, 13, 69..." required maxlength="3" pattern="[0-9]{2,3}">
@@ -188,8 +200,13 @@
 
                     <!-- Étape 4 : Informations de contact -->
                     <div class="form-step" data-step="4">
-                        <p class="form-question">4. Vos coordonnées pour recevoir votre estimation</p>
-                        
+                        <p class="form-question">
+                            4. Excellente nouvelle : vous êtes éligible ! <br>
+                            <span style="font-size: 0.95em; font-weight: normal;">
+                                Renseignez vos coordonnées. Un expert Haut Sommet calculera le montant 
+                                précis de vos aides et vous appellera dans les 24h.
+                            </span>
+                        </p>
                         <div class="form-fields">
                             <div class="form-field">
                                 <label for="nom">Nom *</label>
@@ -228,6 +245,11 @@
                     <!-- Étape 5 : Confirmation -->
                     <div class="form-step" data-step="5">
                         <div class="confirmation-message">
+                            <!-- Bouton de fermeture -->
+                            <button type="button" class="confirmation-close" id="close-confirmation" aria-label="Fermer et recommencer">
+                                <i class="bi bi-x-lg"></i>
+                            </button>
+                            
                             <div class="confirmation-icon">
                                 <i class="bi bi-check-circle-fill"></i>
                             </div>
