Je rajoute des balises img et j'indique le bon chemin qui pointe vers les logos + J'ajuste leur taille en fonction du format (mobile, tablette, ordinateur)

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,13 @@
     <!-- HEADER -->
     <header class="header">
         <div class="logo">
-            <img src="" alt="">Logo
+            <img src="../assets/img/Haut-sommet-Marseille.png" alt="Logo de l'entreprise Haut Sommet">
+        </div>
+
+        <div class="help-logo">
+            <img src="../assets/img/ma-prime-renov.svg" alt="Le logo de MaPrimeRénov'">
+            <img src="../assets/img/cee-logo.png" alt="Le logo des certificats d'économies d'énergie">
+            <img src="../assets/img/qualibat-logo.png" alt="Le logo de la certification RGE Qualibat">
         </div>
 
         <button class="burger-menu" aria-label="Toggle menu" aria-expanded="false">
@@ -375,7 +381,7 @@
             <div class="footer-links">
                 <a href="#">Mentions légales</a>
                 <a href="#">haut-sommet@test.fr</a>
-                <a href="#">Landing page</i></a>
+                <a href="#">Landing page</a>
             </div>
         </div>
     </footer>
