Après avoir déplacé le dossier assets dans mon dossier public, je me charge de corriger les chemins relatifs pour chacun des fichiers se trouvant dans assets

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Obtenez jusqu'à 9500€ d'aides de l'État pour l'installation d'une pompe à chaleur. MaPrimeRénov', CEE, éco-prêt à taux zéro. Vérifiez votre éligibilité gratuitement.">
     <meta name="keywords" content="pompe à chaleur, aides état, MaPrimeRénov, CEE, économie énergie, chauffage, rénovation énergétique">
     <title>Pompe à Chaleur : Jusqu'à 9500€ d'Aides de l'État | Vérifiez votre Éligibilité</title>
-    <link rel="stylesheet" href="../assets/styles/style.css">
+    <link rel="stylesheet" href="assets/styles/style.css">
 
     <!-- Bootstrap Icons uniquement -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -29,13 +29,13 @@
     <!-- HEADER -->
     <header class="header">
         <div class="logo">
-            <img src="../assets/img/Haut-sommet-Marseille.png" alt="Logo de l'entreprise Haut Sommet">
+            <img src="assets/img/Haut-sommet-Marseille.png" alt="Logo de l'entreprise Haut Sommet">
         </div>
 
         <div class="help-logo">
-            <img src="../assets/img/ma-prime-renov.svg" alt="Le logo de MaPrimeRénov'">
-            <img src="../assets/img/cee-logo.png" alt="Le logo des certificats d'économies d'énergie">
-            <img src="../assets/img/qualibat-logo.png" alt="Le logo de la certification RGE Qualibat">
+            <img src="assets/img/ma-prime-renov.svg" alt="Le logo de MaPrimeRénov'">
+            <img src="assets/img/cee-logo.png" alt="Le logo des certificats d'économies d'énergie">
+            <img src="assets/img/qualibat-logo.png" alt="Le logo de la certification RGE Qualibat">
         </div>
 
         <button class="burger-menu" aria-label="Toggle menu" aria-expanded="false">
