--- a/public/index.html
+++ b/public/index.html
@@ -17,12 +17,12 @@
     <!-- Initialisation EmailJS -->
     <script type="text/javascript">
         (function(){
-            emailjs.init('jKNqo-W9zXWuv8Rs5'); // Remplace la valeur ici par ta Public Key qui se trouve dans ton onglet Account de ton profil EmailJS
+            emailjs.init('jKNqo-W9zXWuv8Rs5');
         })();
     </script>
 
     <!-- Le script principal -->
-    <script defer src="../assets/js/main.js"></script>
+    <script defer src="assets/js/main.js"></script>
 
 </head>
 <body>
@@ -92,6 +92,11 @@
                 <h2>Calculez vos aides</h2>
                 <p>C'est simple, rapide et gratuit !</p>
 
+                <!-- Barre de progression -->
+                <div class="progress-bar-container">
+                    <div class="progress-bar" id="progressBar"></div>
+                </div>
+
                 <form class="form-calculator">
                     <!-- Étape 1 : Type d'habitation -->
                     <div class="form-step active" data-step="1">
@@ -116,7 +121,6 @@
                             <span class="page-indicator"><span class="current-step">1</span>/4</span>
                             <button type="button" class="nav-next"><i class="bi bi-chevron-right"></i></button>
                         </div>
-
                     </div>
 
                     <!-- Étape 2 : Statut du logement -->
@@ -144,7 +148,7 @@
                         </div>
                     </div>
 
-                    <!-- Étape 3 : Type de chauffage et département -->
+                    <!-- Étape 3 : Type de chauffage -->
                     <div class="form-step" data-step="3">
                         <p class="form-question">3. Quel est votre type de chauffage actuel ?</p>
                         
@@ -192,11 +196,6 @@
                             >
                         </div>
 
-                        <div class="form-field">
-                            <label for="departement">Dans quel département habitez-vous ?</label>
-                            <input type="text" id="departement" name="departement" placeholder="Ex: 75, 13, 69..." required maxlength="3" pattern="[0-9]{2,3}">
-                        </div>
-
                         <div class="form-navigation">
                             <button type="button" class="nav-prev"><i class="bi bi-chevron-left"></i></button>
                             <span class="page-indicator"><span class="current-step">3</span>/4</span>
@@ -232,6 +231,114 @@
                             <div class="form-field">
                                 <label for="telephone">Téléphone portable *</label>
                                 <input type="tel" id="telephone" name="telephone" placeholder="06 12 34 56 78" required pattern="[0-9]{10}">
+                            </div>
+
+                            <div class="form-field">
+                                <label for="departement">Département *</label>
+                                <select id="departement" name="departement" required>
+                                    <option value="">Sélectionnez votre département</option>
+                                    <option value="01">01 - Ain</option>
+                                    <option value="02">02 - Aisne</option>
+                                    <option value="03">03 - Allier</option>
+                                    <option value="04">04 - Alpes-de-Haute-Provence</option>
+                                    <option value="05">05 - Hautes-Alpes</option>
+                                    <option value="06">06 - Alpes-Maritimes</option>
+                                    <option value="07">07 - Ardèche</option>
+                                    <option value="08">08 - Ardennes</option>
+                                    <option value="09">09 - Ariège</option>
+                                    <option value="10">10 - Aube</option>
+                                    <option value="11">11 - Aude</option>
+                                    <option value="12">12 - Aveyron</option>
+                                    <option value="13">13 - Bouches-du-Rhône</option>
+                                    <option value="14">14 - Calvados</option>
+                                    <option value="15">15 - Cantal</option>
+                                    <option value="16">16 - Charente</option>
+                                    <option value="17">17 - Charente-Maritime</option>
+                                    <option value="18">18 - Cher</option>
+                                    <option value="19">19 - Corrèze</option>
+                                    <option value="21">21 - Côte-d'Or</option>
+                                    <option value="22">22 - Côtes-d'Armor</option>
+                                    <option value="23">23 - Creuse</option>
+                                    <option value="24">24 - Dordogne</option>
+                                    <option value="25">25 - Doubs</option>
+                                    <option value="26">26 - Drôme</option>
+                                    <option value="27">27 - Eure</option>
+                                    <option value="28">28 - Eure-et-Loir</option>
+                                    <option value="29">29 - Finistère</option>
+                                    <option value="2A">2A - Corse-du-Sud</option>
+                                    <option value="2B">2B - Haute-Corse</option>
+                                    <option value="30">30 - Gard</option>
+                                    <option value="31">31 - Haute-Garonne</option>
+                                    <option value="32">32 - Gers</option>
+                                    <option value="33">33 - Gironde</option>
+                                    <option value="34">34 - Hérault</option>
+                                    <option value="35">35 - Ille-et-Vilaine</option>
+                                    <option value="36">36 - Indre</option>
+                                    <option value="37">37 - Indre-et-Loire</option>
+                                    <option value="38">38 - Isère</option>
+                                    <option value="39">39 - Jura</option>
+                                    <option value="40">40 - Landes</option>
+                                    <option value="41">41 - Loir-et-Cher</option>
+                                    <option value="42">42 - Loire</option>
+                                    <option value="43">43 - Haute-Loire</option>
+                                    <option value="44">44 - Loire-Atlantique</option>
+                                    <option value="45">45 - Loiret</option>
+                                    <option value="46">46 - Lot</option>
+                                    <option value="47">47 - Lot-et-Garonne</option>
+                                    <option value="48">48 - Lozère</option>
+                                    <option value="49">49 - Maine-et-Loire</option>
+                                    <option value="50">50 - Manche</option>
+                                    <option value="51">51 - Marne</option>
+                                    <option value="52">52 - Haute-Marne</option>
+                                    <option value="53">53 - Mayenne</option>
+                                    <option value="54">54 - Meurthe-et-Moselle</option>
+                                    <option value="55">55 - Meuse</option>
+                                    <option value="56">56 - Morbihan</option>
+                                    <option value="57">57 - Moselle</option>
+                                    <option value="58">58 - Nièvre</option>
+                                    <option value="59">59 - Nord</option>
+                                    <option value="60">60 - Oise</option>
+                                    <option value="61">61 - Orne</option>
+                                    <option value="62">62 - Pas-de-Calais</option>
+                                    <option value="63">63 - Puy-de-Dôme</option>
+                                    <option value="64">64 - Pyrénées-Atlantiques</option>
+                                    <option value="65">65 - Hautes-Pyrénées</option>
+                                    <option value="66">66 - Pyrénées-Orientales</option>
+                                    <option value="67">67 - Bas-Rhin</option>
+                                    <option value="68">68 - Haut-Rhin</option>
+                                    <option value="69">69 - Rhône</option>
+                                    <option value="70">70 - Haute-Saône</option>
+                                    <option value="71">71 - Saône-et-Loire</option>
+                                    <option value="72">72 - Sarthe</option>
+                                    <option value="73">73 - Savoie</option>
+                                    <option value="74">74 - Haute-Savoie</option>
+                                    <option value="75">75 - Paris</option>
+                                    <option value="76">76 - Seine-Maritime</option>
+                                    <option value="77">77 - Seine-et-Marne</option>
+                                    <option value="78">78 - Yvelines</option>
+                                    <option value="79">79 - Deux-Sèvres</option>
+                                    <option value="80">80 - Somme</option>
+                                    <option value="81">81 - Tarn</option>
+                                    <option value="82">82 - Tarn-et-Garonne</option>
+                                    <option value="83">83 - Var</option>
+                                    <option value="84">84 - Vaucluse</option>
+                                    <option value="85">85 - Vendée</option>
+                                    <option value="86">86 - Vienne</option>
+                                    <option value="87">87 - Haute-Vienne</option>
+                                    <option value="88">88 - Vosges</option>
+                                    <option value="89">89 - Yonne</option>
+                                    <option value="90">90 - Territoire de Belfort</option>
+                                    <option value="91">91 - Essonne</option>
+                                    <option value="92">92 - Hauts-de-Seine</option>
+                                    <option value="93">93 - Seine-Saint-Denis</option>
+                                    <option value="94">94 - Val-de-Marne</option>
+                                    <option value="95">95 - Val-d'Oise</option>
+                                    <option value="971">971 - Guadeloupe</option>
+                                    <option value="972">972 - Martinique</option>
+                                    <option value="973">973 - Guyane</option>
+                                    <option value="974">974 - La Réunion</option>
+                                    <option value="976">976 - Mayotte</option>
+                                </select>
                             </div>
                         </div>
 
