Je rajoute un lien sur le logo haut-sommet situé dans mon header, lors du click on est renvoyé vers l'accueil

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
     <title>Pompe à Chaleur : Jusqu'à 9500€ d'Aides de l'État | Vérifiez votre Éligibilité</title>
     <link rel="stylesheet" href="assets/styles/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
-    <script type="text/javascript">
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+    <script>
         (function(){
             emailjs.init('jKNqo-W9zXWuv8Rs5');
         })();
@@ -20,7 +20,7 @@
     <!-- HEADER -->
     <header class="header">
         <div class="logo">
-            <img src="assets/img/Haut-sommet-Marseille.png" alt="Logo de l'entreprise Haut Sommet">
+            <a href="#accueil"><img src="assets/img/Haut-sommet-Marseille.png" alt="Logo de l'entreprise Haut Sommet"></a>
         </div>
 
         <div class="help-logo">
@@ -43,7 +43,7 @@
         </nav>
     </header>
 
-    <!-- Téléphone fixe en bas à droite -->
+    <!-- Le numéro de téléphone fixe en bas à droite -->
     <a href="tel:0800003626" class="phone-fixed" aria-label="Appelez-nous">
         <i class="bi bi-telephone-fill"></i>
         <span class="phone-text">0 800 00 36 26</span>
