correction des erreurs de syntaxe au niveau de la section FAQ de sorte à ce qu'il n'y ai plus d'erreurs lors de la validation sur schema.org

--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
         "email": "secretariat.hautsommet@gmail.com",
         "address": {
             "@type": "PostalAddress",
-            "streetAddress": "24-26 Boulevard Gay Lussac"
+            "streetAddress": "24-26 Boulevard Gay Lussac",
             "addressLocality": "Marseille",
             "addressRegion": "Provence-Alpes-Côte d'Azur",
             "postalCode": "13014",
@@ -205,6 +205,13 @@
                 "position": 3,
                 "name": "Avantages",
                 "item": "https://www.hautsommet-marseille.fr/#avantages"
+            },
+
+            {
+                "@type": "ListItem",
+                "position": 4,
+                "name": "FAQ",
+                "item": "https://www.hautsommet-marseille.fr/#faq"
             }
         ]
     }
@@ -701,59 +708,59 @@
         <!-- Section 4 : FAQ -->
         <section id="faq" class="section-faq">
             <div class="container">
-
                 <!-- FAQ -->
                 <div class="faq-wrapper">
                     <h2>Questions fréquentes sur les pompes à chaleur</h2>
                     
-                    <div class="faq-list" itemscope itemtype="https://schema.org/FAQPage">
-                        <article class="faq-item" itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
+                    
+                    <div class="faq-list">
+                        <article class="faq-item">
                             <button class="faq-question">
-                                <span itemprop="name">Suis-je éligible aux aides de l'État pour une pompe à chaleur ?</span>
+                                <span>Suis-je éligible aux aides de l'État pour une pompe à chaleur ?</span>
                                 <i class="bi bi-chevron-down" aria-hidden="true"></i>
                             </button>
-                            <div class="faq-answer" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer">
-                                <p itemprop="text">Vous êtes éligible aux aides MaPrimeRénov' et CEE si vous êtes propriétaire d'un logement de plus de 2 ans et que vous remplacez un système de chauffage fossile (gaz, fioul) ou électrique. Le montant des aides cumulées peut atteindre jusqu'à 9 500€ selon vos revenus et votre situation.</p>
+                            <div class="faq-answer">
+                                <p>Vous êtes éligible aux aides MaPrimeRénov' et CEE si vous êtes propriétaire d'un logement de plus de 2 ans et que vous remplacez un système de chauffage fossile (gaz, fioul) ou électrique. Le montant des aides cumulées peut atteindre jusqu'à 9 500€ selon vos revenus et votre situation.</p>
                             </div>
                         </article>
 
-                        <article class="faq-item" itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
+                        <article class="faq-item">
                             <button class="faq-question">
-                                <span itemprop="name">Combien de temps dure l'installation d'une pompe à chaleur ?</span>
+                                <span>Combien de temps dure l'installation d'une pompe à chaleur ?</span>
                                 <i class="bi bi-chevron-down" aria-hidden="true"></i>
                             </button>
-                            <div class="faq-answer" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer">
-                                <p itemprop="text">L'installation d'une pompe à chaleur prend généralement 1 à 2 jours selon la configuration de votre logement et le type de PAC. Chez Haut Sommet, nous garantissons une installation sous 4 semaines maximum après validation de votre dossier d'aides.</p>
+                            <div class="faq-answer">
+                                <p>L'installation d'une pompe à chaleur prend généralement 1 à 2 jours selon la configuration de votre logement et le type de PAC. Chez Haut Sommet, nous garantissons une installation sous 4 semaines maximum après validation de votre dossier d'aides.</p>
                             </div>
                         </article>
 
-                        <article class="faq-item" itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
+                        <article class="faq-item">
                             <button class="faq-question">
-                                <span itemprop="name">Quelles économies puis-je réaliser avec une pompe à chaleur ?</span>
+                                <span>Quelles économies puis-je réaliser avec une pompe à chaleur ?</span>
                                 <i class="bi bi-chevron-down" aria-hidden="true"></i>
                             </button>
-                            <div class="faq-answer" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer">
-                                <p itemprop="text">En moyenne, une pompe à chaleur permet une réduction de 60 à 70% sur votre facture de chauffage annuelle, soit jusqu'à 2 000€ d'économies par an. Les économies varient selon votre chauffage actuel, la surface de votre logement et votre consommation.</p>
+                            <div class="faq-answer">
+                                <p>En moyenne, une pompe à chaleur permet une réduction de 60 à 70% sur votre facture de chauffage annuelle, soit jusqu'à 2 000€ d'économies par an. Les économies varient selon votre chauffage actuel, la surface de votre logement et votre consommation.</p>
                             </div>
                         </article>
 
-                        <article class="faq-item" itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
+                        <article class="faq-item">
                             <button class="faq-question">
-                                <span itemprop="name">La pompe à chaleur fonctionne-t-elle en hiver à Marseille ?</span>
+                                <span>La pompe à chaleur fonctionne-t-elle en hiver à Marseille ?</span>
                                 <i class="bi bi-chevron-down" aria-hidden="true"></i>
                             </button>
-                            <div class="faq-answer" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer">
-                                <p itemprop="text">Oui, absolument ! Les pompes à chaleur modernes fonctionnent efficacement jusqu'à -20°C et sont parfaitement adaptées au climat méditerranéen de Marseille et des Bouches-du-Rhône. Les températures hivernales dans la région permettent un excellent rendement tout au long de l'année.</p>
+                            <div class="faq-answer">
+                                <p>Oui, absolument ! Les pompes à chaleur modernes fonctionnent efficacement jusqu'à -20°C et sont parfaitement adaptées au climat méditerranéen de Marseille et des Bouches-du-Rhône. Les températures hivernales dans la région permettent un excellent rendement tout au long de l'année.</p>
                             </div>
                         </article>
 
-                        <article class="faq-item" itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
+                        <article class="faq-item">
                             <button class="faq-question">
-                                <span itemprop="name">Qui s'occupe des démarches administratives pour les aides ?</span>
+                                <span>Qui s'occupe des démarches administratives pour les aides ?</span>
                                 <i class="bi bi-chevron-down" aria-hidden="true"></i>
                             </button>
-                            <div class="faq-answer" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer">
-                                <p itemprop="text">Haut Sommet prend en charge l'intégralité des démarches administratives : demande MaPrimeRénov', dossier CEE, éco-prêt à taux zéro et toutes les formalités nécessaires. Notre équipe d'experts vous accompagne de A à Z. Vous n'avez strictement rien à faire !</p>
+                            <div class="faq-answer">
+                                <p>Haut Sommet prend en charge l'intégralité des démarches administratives : demande MaPrimeRénov', dossier CEE, éco-prêt à taux zéro et toutes les formalités nécessaires. Notre équipe d'experts vous accompagne de A à Z. Vous n'avez strictement rien à faire !</p>
                             </div>
                         </article>
                     </div>
